# how-to-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: how_to_benchmark_fn.rs  how_to_benchmark_multi_file.rs
resources/: sample_data.json  string_variable.txt
src/: lib.rs  main.rs
src/error_handling/: common.rs  how_to_consume_error.rs  how_to_create_error.rs  mod.rs  using_anyhow.rs  using_custom_enum.rs  using_dynamic_trait.rs  using_expect.rs  using_thiserror.rs  using_unwrap.rs
src/how_to/: how_to_handle_large_test_sample.rs  how_to_have_pretty_assert.rs  how_to_ternary_operator.rs  mod.rs
src/how_to/how_to_handle_error/: how_to_create_error.rs  using_expect.rs  using_thiserror.rs  using_unwrap.rs
src/how_to/how_to_mock/: mod.rs
src/how_to/how_to_parse/: common.rs  complex_example.rs  mod.rs
src/tips/: how_to_chain_method.rs  how_to_handle_large_test_sample.rs  how_to_handle_safe_arithmetic.rs  how_to_handle_unit_in_variable.rs  how_to_have_pretty_assert.rs  how_to_init_struct.rs  how_to_input_multiple_test_sample.rs  how_to_parse_string.rs  how_to_sort.rs  how_to_ternary_operator.rs  how_to_write_long_number.rs  how_to_write_safe_arithmetic.rs  how_to_write_string_variable.rs  mod.rs
src/tips/how_to_parse/: common.rs  complex_example.rs  mod.rs  simple_example.rs  simple_example_1.rs  simple_example_2.rs
src/tips/parser/: simple.rs
src/when_to/: mod.rs  when_to_infer_or_explicit_vec_collect.rs  when_to_use_format_specifier.rs  when_to_use_iter_vs_element_index_access.rs
