[package]
name = "rust-faq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rstest = "0.18.2"
fake = "2.9"
rand = "0.8.5"
pretty_assertions = "1.4.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
thiserror = "1.0"
mockall = "0.12.1"
regex = { version =  "1.10.2", features = ["std"]}
nom = "7.1.3"
