[package]
name = "rust-faq"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0.217", features = ["derive"] }
serde_json = "^1.0.138"
anyhow = "^1.0.95"
thiserror = "^2.0"
mockall = "^0.13.1"
regex = { version =  "^1.11.1", features = ["std"]}
nom = "^7.1.3"

[dev-dependencies]
rstest = "^0.24.0"
fake = "^3.1"
rand = "^0.8.5"
pretty_assertions = "^1.4.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "how_to_benchmark_fn"
harness = false

[[bench]]
name = "how_to_benchmark_multi_file"
harness = false
